Add Railway deployment configuration
- Add Spring Boot Actuator for health checks
- Add railway.toml files for both backend and frontend
- Configure CORS to be environment-driven for production
- Update frontend Dockerfile with VITE_API_URL build arg

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>